k8s/apps/prometheus-stack/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-stack
  namespace: monitoring
spec:
  hostnames:
    - prometheus.walnuts.dev
  parentRefs:
    - name: pomerium-gateway
      namespace: pomerium
  rules:
    - backendRefs:
        - kind: Service
          name: prometheus-operated
          port: 9090
          weight: 1
      filters:
        - extensionRef:
            group: gateway.pomerium.io
            kind: PolicyFilter
            name: prometheus-stack
          type: ExtensionRef
